--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build-prod": "ng build --configuration production && npm run sass && npm run uglifycss && npm run copy",
-    "sass": "sass src/angular2-toaster/src/lib/toaster.scss src/angular2-toaster/src/lib/toaster.css",
-    "uglifycss": "node_modules/.bin/uglifycss src/angular2-toaster/src/lib/toaster.css > src/angular2-toaster/src/lib/toaster.min.css",
+    "sass": "sass packages/angular2-toaster/src/lib/toaster.scss packages/angular2-toaster/src/lib/toaster.css",
+    "sass:min": "esbuild --bundle app.css --outfile=out.css",
+    "uglifycss": "node_modules/.bin/uglifycss packages/angular2-toaster/src/lib/toaster.css > packages/angular2-toaster/src/lib/toaster.min.css",
     "copy": "cpx LICENSE dist/angular2-toaster && cpx README.md dist/angular2-toaster && npm run copystyles",
-    "copystyles": "cpx \"src/angular2-toaster/src/lib/*.{css,css.map,min.css,scss}\" dist/angular2-toaster"
+    "copystyles": "cpx \"packages/angular2-toaster/src/lib/*.{css,css.map,min.css,scss}\" dist/angular2-toaster"
   },
   "private": true,
   "dependencies": {
