--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:lib": "ng build --configuration production && npm run sass && npm run uglifycss && npm run copy",
-    "sass": "sass packages/angular2-toaster/src/lib/toaster.scss packages/angular2-toaster/src/lib/toaster.css",
+    "build:lib": "ng build angular2-toaster --configuration production",
+    "clean": "rimraf dist",
+    "sass": "sass packages/angular2-toaster/src/lib/toaster.scss dist/angular2-toaster/toaster.css",
     "uglifycss": "esbuild --bundle packages/angular2-toaster/src/lib/toaster.css --outfile=dist/angular2-toaster/toaster.min.css --minify  --sourcemap=external",
-    "copy": "cpx LICENSE dist/angular2-toaster && cpx README.md dist/angular2-toaster && npm run copystyles",
-    "copystyles": "cpx \"packages/angular2-toaster/src/lib/*.{css,css.map,min.css,scss}\" dist/angular2-toaster"
+    "copy": "cpx LICENSE dist/angular2-toaster && cpx README.md dist/angular2-toaster && yarn copystyles",
+    "copystyles": "cpx \"packages/angular2-toaster/src/lib/*.{css,css.map,min.css,scss}\" dist/angular2-toaster",
+    "package": "yarn clean && yarn build:lib && yarn sass && yarn uglifycss && yarn copy"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +40,7 @@
     "codelyzer": "^6.0.0",
     "coveralls": "3.1.0",
     "cpx": "^1.5.0",
+    "esbuild": "0.14.22",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
@@ -47,10 +50,10 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "ng-packagr": "^13.3.1",
     "protractor": "~7.0.0",
+    "rimraf": "^3.0.2",
     "sass": "1.29.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.6.4",
-    "esbuild": "0.14.22"
+    "typescript": "~4.6.4"
   }
 }
