--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ src/*.js
 src/*.map
 src/*.d.ts
 src/*.ngfactory.ts
-angular2-toaster.d.ts
+angular-toaster.d.ts
 demo/webpack/bundle.js
 demo/webpack/bundle.js.map
 .DS_Store
