--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "yarn build:lib && yarn build:demo",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "build:demo": "ng build demo",
     "build:lib": "ng build angular-toaster --configuration production",
+    "test:lib:ci": "ng test angular-toaster  --browsers=ChromeHeadless --watch=false --code-coverage && cat ./coverage/angular-toaster/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "clean": "rimraf dist",
     "sass": "sass packages/angular-toaster/src/lib/toaster.scss dist/angular-toaster/toaster.css",
     "uglifycss": "esbuild --bundle packages/angular-toaster/src/lib/toaster.css --outfile=dist/angular-toaster/toaster.min.css --minify  --sourcemap=external",
@@ -39,6 +41,7 @@
     "@angular-eslint/template-parser": "13.5.0",
     "@angular/cli": "~13.3.9",
     "@angular/compiler-cli": "~13.3.11",
+    "@changesets/cli": "^2.24.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
