build: add build file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,6 +46,14 @@
         "plugin:@angular-eslint/template/recommended"
       ],
       "rules": {}
+    },
+    {
+      "files": [
+        "*.js"
+      ],
+      "parserOptions": {
+        "ecmaVersion": 6
+      }
     }
   ]
 }
