--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.27.1",
     "@typescript-eslint/parser": "5.27.1",
+    "colors": "^1.4.0",
     "coveralls": "3.1.0",
     "cpx": "^1.5.0",
     "esbuild": "0.14.22",
     "eslint": "^8.17.0",
+    "fs-extra": "^10.1.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
@@ -62,6 +64,7 @@
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
     "sass": "1.29.0",
+    "shelljs": "^0.8.5",
     "ts-node": "~8.3.0",
     "typescript": "~4.6.4"
   }
