--- a/packages/angular-toaster/.eslintrc.json
+++ b/packages/angular-toaster/.eslintrc.json
@@ -20,7 +20,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "lib",
+            "prefix": "toast",
             "style": "camelCase"
           }
         ],
