--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "root",
-  "version": "1.0.0",
+  "version": "1.0.1-beta.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "yarn build:lib && yarn build:demo",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "changelog:all": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -48,8 +50,10 @@
     "@typescript-eslint/eslint-plugin": "5.27.1",
     "@typescript-eslint/parser": "5.27.1",
     "colors": "^1.4.0",
+    "conventional-changelog-cli": "^2.2.2",
     "coveralls": "3.1.0",
     "cpx": "^1.5.0",
+    "enquirer": "^2.3.6",
     "esbuild": "0.14.22",
     "eslint": "^8.17.0",
     "fs-extra": "^10.1.0",
@@ -60,10 +64,12 @@
     "karma-coverage": "^2.2.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "minimist": "^1.2.6",
     "ng-packagr": "^13.3.1",
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
     "sass": "1.29.0",
+    "semver": "^7.3.7",
     "shelljs": "^0.8.5",
     "ts-node": "~8.3.0",
     "typescript": "~4.6.4"
