--- a/angular.json
+++ b/angular.json
@@ -163,9 +163,10 @@
       }
     }
   },
-  "defaultProject": "angular-toaster",
   "cli": {
     "analytics": "10a22c2d-0a0a-46ae-a82a-cd74f58ee60e",
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
