--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "uglifycss": "esbuild --bundle packages/angular-toaster/src/lib/toaster.css --outfile=dist/angular-toaster/toaster.min.css --minify  --sourcemap=external",
     "copy": "cpx LICENSE dist/angular-toaster && cpx packages/angular-toaster/README.md dist/angular-toaster && yarn copystyles",
     "copystyles": "cpx \"packages/angular-toaster/src/lib/*.{css,css.map,min.css,scss}\" dist/angular-toaster",
-    "package": "yarn clean && yarn build:lib && yarn sass && yarn uglifycss && yarn copy"
+    "package": "yarn clean && yarn build:lib && yarn sass && yarn uglifycss && yarn copy",
+    "prerelease": "yarn build",
+    "release": "node scripts/release.js",
+    "release:alpha": "node scripts/release.js --preId alpha",
+    "release:beta": "node scripts/release.js --preId beta"
   },
   "private": true,
   "dependencies": {
@@ -36,26 +40,26 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.0",
-    "@angular-eslint/builder": "13.5.0",
-    "@angular-eslint/eslint-plugin": "13.5.0",
-    "@angular-eslint/eslint-plugin-template": "13.5.0",
-    "@angular-eslint/schematics": "13.5.0",
-    "@angular-eslint/template-parser": "13.5.0",
+    "@angular-eslint/builder": "14.0.2",
+    "@angular-eslint/eslint-plugin": "14.0.2",
+    "@angular-eslint/eslint-plugin-template": "14.0.2",
+    "@angular-eslint/schematics": "14.0.2",
+    "@angular-eslint/template-parser": "14.0.2",
     "@angular/cli": "^14.1.0",
     "@angular/compiler-cli": "^14.1.0",
     "@changesets/cli": "^2.24.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.27.1",
-    "@typescript-eslint/parser": "5.27.1",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "colors": "^1.4.0",
     "conventional-changelog-cli": "^2.2.2",
     "coveralls": "3.1.0",
     "cpx": "^1.5.0",
     "enquirer": "^2.3.6",
     "esbuild": "0.14.22",
-    "eslint": "^8.17.0",
+    "eslint": "^8.18.0",
     "fs-extra": "^10.1.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
