--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@angular/platform-browser": "^15.0.3",
     "@angular/platform-browser-dynamic": "^15.0.3",
     "@angular/router": "^15.0.3",
-    "@ng-bootstrap/ng-bootstrap": "13.0.0",
+    "@ng-bootstrap/ng-bootstrap": "14.0.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
     "rxjs": "~6.6.0",
@@ -52,12 +52,12 @@
     "@angular/cli": "^15.0.3",
     "@angular/compiler-cli": "^15.0.3",
     "@changesets/cli": "^2.24.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/jasmine": "4.3.1",
+    "@types/jasminewd2": "2.0.10",
+    "@types/node": "18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
-    "angular-cli-ghpages": "^1.0.3",
+    "angular-cli-ghpages": "^1.0.5",
     "colors": "^1.4.0",
     "conventional-changelog-cli": "^2.2.2",
     "coveralls": "3.1.0",
@@ -71,8 +71,8 @@
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^2.2.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "~5.0.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "minimist": "^1.2.6",
     "ng-packagr": "^15.0.1",
     "protractor": "~7.0.0",
@@ -80,7 +80,7 @@
     "sass": "1.29.0",
     "semver": "^7.3.7",
     "shelljs": "^0.8.5",
-    "ts-node": "~8.3.0",
+    "ts-node": "10.7.0",
     "typescript": "~4.8.4"
   }
 }
