--- a/packages/angular-toaster/package.json
+++ b/packages/angular-toaster/package.json
@@ -28,10 +28,10 @@
     "growl"
   ],
   "peerDependencies": {
-    "@angular/common": "^13.0.0",
-    "@angular/compiler": "^13.0.0",
-    "@angular/core": "^13.0.0",
-    "rxjs": "^6.6.0"
+    "@angular/common": "^13.0.0 || ^14.0.0 || ^15.0.0",
+    "@angular/compiler": "^13.0.0 || ^14.0.0 || ^15.0.0",
+    "@angular/core": "^13.0.0 || ^14.0.0 || ^15.0.0",
+    "rxjs": "^6.6.0 || || ^7.4.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
