--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "e2e": "ng e2e",
     "build:demo": "ng build demo",
     "build:lib": "ng build angular-toaster --configuration production",
+    "build:schematics": "tsc -p ./packages/angular-toaster/schematics/tsconfig.json --outDir dist/angular-toaster/schematics",
     "test:lib:ci": "ng test angular-toaster  --browsers=ChromeHeadless --watch=false --code-coverage && cat ./coverage/angular-toaster/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "clean": "rimraf dist",
     "sass": "sass packages/angular-toaster/src/lib/toaster.scss dist/angular-toaster/toaster.css",
     "uglifycss": "esbuild --bundle packages/angular-toaster/src/lib/toaster.css --outfile=dist/angular-toaster/toaster.min.css --minify  --sourcemap=external",
     "copy": "cpx LICENSE dist/angular-toaster && cpx packages/angular-toaster/README.md dist/angular-toaster && yarn copystyles",
     "copystyles": "cpx \"packages/angular-toaster/src/lib/*.{css,css.map,min.css,scss}\" dist/angular-toaster",
-    "package": "yarn clean && yarn build:lib && yarn sass && yarn uglifycss && yarn copy",
+    "package": "yarn clean && yarn build:lib && yarn sass && yarn uglifycss && yarn copy && yarn build:schematics",
     "prerelease": "yarn clean && yarn build:lib && yarn sass && yarn uglifycss && yarn copy && yarn build:demo",
     "release": "node scripts/release.js",
     "release:alpha": "node scripts/release.js --preId alpha",
@@ -26,10 +27,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "^16.2.7",
     "@angular/animations": "^16.2.8",
     "@angular/common": "^16.2.8",
     "@angular/compiler": "^16.2.8",
     "@angular/core": "^16.2.8",
+    "@angular/cdk": "^16.2.8",
     "@angular/forms": "^16.2.8",
     "@angular/localize": "^16.2.8",
     "@angular/platform-browser": "^16.2.8",
@@ -52,6 +55,7 @@
     "@angular/cli": "^16.2.5",
     "@angular/compiler-cli": "^16.2.8",
     "@changesets/cli": "^2.24.0",
+    "@schematics/angular": "^16.2.7",
     "@types/jasmine": "4.3.1",
     "@types/jasminewd2": "2.0.10",
     "@types/node": "18.11.11",
