--- a/packages/angular-toaster/package.json
+++ b/packages/angular-toaster/package.json
@@ -36,5 +36,6 @@
   "dependencies": {
     "tslib": "^2.0.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "schematics": "./schematics/collection.json"
 }
