--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^2.2.0",
     "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine-html-reporter": "2.1.0",
     "minimist": "^1.2.6",
     "ng-packagr": "^17.0.2",
     "protractor": "~7.0.0",
