--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "@types/node": "18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
-    "angular-cli-ghpages": "^1.0.5",
+    "angular-cli-ghpages": "^2.0.0-beta.2",
     "colors": "^1.4.0",
     "conventional-changelog-cli": "^2.2.2",
     "coveralls": "3.1.0",
