--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "root",
   "version": "1.3.0",
+  "engines": {
+    "node": "^18.13.0 || ^20.9.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -59,7 +62,7 @@
     "@schematics/angular": "^17.0.6",
     "@types/jasmine": "4.3.1",
     "@types/jasminewd2": "2.0.10",
-    "@types/node": "18.11.11",
+    "@types/node": "^20.11.16",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "angular-cli-ghpages": "^2.0.0-beta.2",
