--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "yarn build:lib && yarn build:demo",
+    "build": "yarn build:lib && yarn build:dev-app",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "changelog:all": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "ng lint angular-toaster && ng lint dev-app",
     "e2e": "ng e2e",
-    "build:demo": "ng build demo",
+    "build:dev-app": "ng build dev-app",
     "build:lib": "ng build angular-toaster --configuration production",
     "build:schematics": "tsc -p ./packages/angular-toaster/schematics/tsconfig.json --outDir dist/angular-toaster/schematics",
     "test:lib": "ng test angular-toaster",
@@ -24,44 +24,45 @@
     "copy": "cpx LICENSE dist/angular-toaster && cpx packages/angular-toaster/README.md dist/angular-toaster && yarn copystyles",
     "copystyles": "cpx \"packages/angular-toaster/src/lib/*.{css,css.map,min.css,scss}\" dist/angular-toaster",
     "package": "yarn clean && yarn build:lib && yarn sass && yarn uglifycss && yarn copy && yarn build:schematics",
-    "prerelease": "yarn clean && yarn build:lib && yarn sass && yarn uglifycss && yarn copy && yarn build:demo",
+    "prerelease": "yarn clean && yarn build:lib && yarn sass && yarn uglifycss && yarn copy && yarn build:dev-app",
     "release": "node scripts/release.js",
     "release:alpha": "node scripts/release.js --preId alpha",
     "release:beta": "node scripts/release.js --preId beta"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^17.0.6",
-    "@angular/animations": "^17.0.6",
-    "@angular/cdk": "^17.0.3",
-    "@angular/common": "^17.0.6",
-    "@angular/compiler": "^17.0.6",
-    "@angular/core": "^17.0.6",
-    "@angular/forms": "^17.0.6",
-    "@angular/localize": "^17.0.6",
-    "@angular/platform-browser": "^17.0.6",
-    "@angular/platform-browser-dynamic": "^17.0.6",
-    "@angular/router": "^17.0.6",
-    "@ng-bootstrap/ng-bootstrap": "16.0.0",
+    "@angular/animations": "^17.1.0",
+    "@angular/common": "^17.1.0",
+    "@angular/compiler": "^17.1.0",
+    "@angular/core": "^17.1.0",
+    "@angular/forms": "^17.1.0",
+    "@angular/localize": "^17.1.2",
+    "@angular/platform-browser": "^17.1.0",
+    "@angular/platform-browser-dynamic": "^17.1.0",
+    "@angular/platform-server": "^17.1.0",
+    "@angular/router": "^17.1.0",
+    "@angular/ssr": "^17.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.10.2",
-    "bootstrap": "^5.2.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.14.2"
+    "bootstrap": "^5.3.2",
+    "express": "^4.18.2",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.6",
+    "@angular-devkit/build-angular": "^17.1.2",
     "@angular-eslint/builder": "17.2.1",
     "@angular-eslint/eslint-plugin": "17.2.1",
     "@angular-eslint/eslint-plugin-template": "17.2.1",
     "@angular-eslint/schematics": "17.2.1",
     "@angular-eslint/template-parser": "17.2.1",
-    "@angular/cli": "^17.0.6",
-    "@angular/compiler-cli": "^17.0.6",
+    "@angular/cli": "^17.1.1",
+    "@angular/compiler-cli": "^17.1.0",
     "@changesets/cli": "^2.24.0",
-    "@schematics/angular": "^17.0.6",
-    "@types/jasmine": "4.3.1",
-    "@types/jasminewd2": "2.0.10",
+    "@schematics/angular": "^17.1.1",
+    "@types/express": "^4.17.17",
+    "@types/jasmine": "~5.1.0",
     "@types/node": "^20.11.16",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
@@ -74,18 +75,16 @@
     "esbuild": "0.14.22",
     "eslint": "^8.53.0",
     "fs-extra": "^10.1.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "^2.2.0",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "2.1.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
     "minimist": "^1.2.6",
-    "ng-packagr": "^17.0.2",
-    "protractor": "~7.0.0",
+    "ng-packagr": "^17.1.0",
     "rimraf": "^3.0.2",
-    "sass": "1.29.0",
+    "sass": "^1.70.0",
     "semver": "^7.3.7",
     "shelljs": "^0.8.5",
     "ts-node": "10.7.0",
