--- a/packages/angular-toaster/.eslintrc.json
+++ b/packages/angular-toaster/.eslintrc.json
@@ -28,7 +28,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "lib",
+            "prefix": "toast",
             "style": "kebab-case"
           }
         ]
