feat: fix lint error and run lint check in CI/CD

--- a/angular.json
+++ b/angular.json
@@ -141,6 +141,15 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "packages/dev-app/**/*.ts",
+              "packages/dev-app/**/*.html"
+            ]
+          }
         }
       }
     }
