--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,5 +39,7 @@ jobs:
         run: yarn
       - name: Build
         run: yarn build
+      - name: Lint check
+        run: yarn lint
       - name: Unit Test
         run: yarn test:lib:ci || true
