--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "changelog:all": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "test": "ng test",
     "lint": "ng lint angular-toaster && ng lint dev-app",
+    "lint:fix": "ng lint angular-toaster --fix && ng lint dev-app --fix",
     "e2e": "ng e2e",
     "build:dev-app": "ng build dev-app",
     "build:lib": "ng build angular-toaster --configuration production",
@@ -64,8 +65,8 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.11.16",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@typescript-eslint/eslint-plugin": "6.19.0",
+    "@typescript-eslint/parser": "6.19.0",
     "angular-cli-ghpages": "^2.0.0-beta.2",
     "colors": "^1.4.0",
     "conventional-changelog-cli": "^2.2.2",
@@ -73,7 +74,7 @@
     "cpx": "^1.5.0",
     "enquirer": "^2.3.6",
     "esbuild": "0.14.22",
-    "eslint": "^8.53.0",
+    "eslint": "^8.56.0",
     "fs-extra": "^10.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
