refactor: use angular 17 schematics to rewrite ng-add schematics feature

--- a/packages/angular-toaster/package.json
+++ b/packages/angular-toaster/package.json
@@ -35,6 +35,9 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
+  "ng-add": {
+    "save": "dependencies"
+  },
   "sideEffects": false,
   "schematics": "./schematics/collection.json"
 }
