test: add ng-add schematics unit test

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,5 +41,7 @@ jobs:
         run: yarn build
       - name: Lint check
         run: yarn lint
+      - name: Schematics check
+        run: yarn test:schematics
       - name: Unit Test
         run: yarn test:lib:ci || true
