--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:dev-app": "ng build dev-app",
     "build:lib": "ng build angular-toaster --configuration production",
     "build:schematics": "tsc -p ./packages/angular-toaster/schematics/tsconfig.json --outDir dist/angular-toaster/schematics",
+    "test:schematics": "ts-node --project packages/angular-toaster/schematics/tsconfig.spec.json node_modules/jasmine/bin/jasmine.js packages/angular-toaster/schematics/**/*.spec.ts",
     "test:lib": "ng test angular-toaster",
     "test:lib:ci": "ng test angular-toaster  --browsers=ChromeHeadless --watch=false --code-coverage && cat ./coverage/angular-toaster/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "clean": "rimraf dist",
@@ -76,6 +77,7 @@
     "esbuild": "0.14.22",
     "eslint": "^8.56.0",
     "fs-extra": "^10.1.0",
+    "jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
